# matsim-rs

./: .gitignore  Cargo.toml  README.md
crates/matsim-cli/: Cargo.toml
crates/matsim-cli/src/: main.rs
crates/matsim-core/: Cargo.toml
crates/matsim-core/src/: lib.rs
crates/matsim-io/: Cargo.toml
crates/matsim-io/src/: lib.rs
examples/equil/: README.md
examples/innovation-cutoff/: config.xml
examples/mixed-replanning/: config.xml  network.xml  plans.xml
examples/plan-memory-cap/: config.xml
examples/reroute/: config.xml  network.xml  plans.xml
examples/two-plans/: config.xml  network.xml  plans.xml
scripts/: compare-with-java.sh
