[workspace]
members = [
    "crates/matsim-cli",
    "crates/matsim-core",
    "crates/matsim-io",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["OpenAI Codex"]

[workspace.dependencies]
clap = { version = "4.5.38", features = ["derive"] }
flate2 = "1.1.1"
quick-xml = "0.37.5"
thiserror = "2.0.12"

